<resources>
    <string name="app_name">MySuperMarket</string>
    <string name="prijavalogin">PRIJAVA</string>
    <string name="registracijalogin">REGISTRACIJA</string>
    <string name="Korisnickoime">Korisnicko ime</string>
    <string name="Lozinka">Lozinka</string>
    <string name="SignInButton">Nastavi</string>
    <string name="ZaboravljenaLozinka">Zaboravljena lozinka ?</string>
    <string name="ImeiPrezime">Ime Prezime </string>
    <string name="EMail">E-mail </string>
    <string name="Potvrditelozinku">Potvrdite lozinku </string>
    <string name="Unesitebrojmobilnogtelefona">Unesite broj mobilnog telefona </string>
    <string name="Unesitebrojfiksnogtelefona">Unesite broj fiksnog telefona </string>
    <string name="Unesitebrojfaksa">Unesite broj faksa </string>
    <string name="Unesitenazivulice">Unesite naziv ulice </string>
    <string name="Unesitebrojulice">Unesite ulicni broj  </string>
    <string name="Unesitebrojstana">Unesite broj stana </string>
    <string name="Unesitebrojsprata">Unesite broj sprata </string>
    <string name="Unesitebrojulaza">Unesite broj ulaza </string>
    <string name="Unesitepostanskibroj">Unesite postanski broj </string>
    <string name="Unesiteimegrada">Grad </string>
    <string name="Newsletter">Newsletter  </string>
    <string name="Dan">Dan </string>
    <string name="Mesec">Mesec </string>
    <string name="Godina">Godina </string>
    <string name="Pol">Pol </string>
    <string name="RegistrationButton">Registruj se </string>
    <string name="Uslovikoriscenja">Uslovi koriscenja </string>
    <string name="PolMuski">Muski </string>
    <string name="PolZenski">Zenski </string>
    <string name="Zaboravljenalozinka">Unesite Vasu E-mail adresu </string>
    <string name="PosaljiEmail">Posaljite Vasu E-mail adresu </string>
    <string name="Greska">Doslo je do greske,pokusajte ponovo!</string>
    <string name="Zapamtime">Zapamti me </string>
    <string name="Ime">Ime </string>
    <string name="Prezime">Prezime </string>
    <string name="Producttitle">Product title</string>
    <string name="Price">$999</string>
    <string name="Dodajukorpu">Dodaj u korpu</string>
    <string name="Muskacipela">Muska cipela</string>
    <string name="Velicina">Velicina:</string>
    <string name="Boja">Boja:</string>
    <string name="Materijal">Materijal:</string>
    <string name="Korpa">Korpa</string>
    <string name="Kupi">Kupi</string>
    <string name="Skip">Nastavi bez logovanja</string>
    <string name="Adresa">Molim Vas unesite podatke o adresi</string>
    <string name="Finalnakorpa">Konacan izgled Vase korpe </string>
    <string name="PotvrditeAdresu">Potvrdi</string>
    <string name="NacinPlacanja">Odaberite nacin placanja</string>
    <string name="Popunitepolja">Popunite sva polja</string>
    <string name="LoginIncorrect">Uneti podaci su neispravni</string>
    <string name="PosaljiEmailadresu">Posalji</string>
    <string name="Odustani">Odustani</string>
    <string name="PravnoLice">Pravno lice</string>
    <string name="PIB">PIB</string>
    <string name="Nazivkompanije">Naziv kompanije</string>
    <string name="InvalidDate">Izabrani mesec nema taj broj dana.</string>
    <string name="BadPhonelength">Proverite uneti broj telefona</string>
    <string name="Radiogroupcheck">Izaberite pol</string>
    <string name="Missingfields">Niste popunili sva polja.</string>
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="Birthday">Datum rodjenja</string>
    <string name="ChangeProfile">Izmeni</string>
    <string name="Settings">Podesavanja</string>
    <string name="Notifications">Notifikacije</string>
    <string name="SignOut">Odjavi se</string>
    <string name="Support">Podrska</string>
    <string name="Profile">Profil</string>
    <string name="AddtoBasket">Dodaj u korpu</string>
    <string name="Close">Zatvori</string>
    <string name="Statistics">Statistika</string>
    <string name="TotalAmount">UKUPAN IZNOS</string>
    <string name="Shopping">KUPOVINE</string>
    <string name="Recomendations">PREPORUKE</string>
    <string name="FavouriteProducts">Vasi Omiljeni proizvodi</string>
    <string name="EmailAdresa">E-mail adresa</string>


    <string-array name="menu_options">

        <item>Ime i Preime</item>
        <item>E-mail</item>
        <item>Home</item>
        <item>Cipele</item>
        <item>Torbe</item>
        <item>Satovi</item>
        <item>Nakit</item>
        <item>Sportska oprema</item>
        <item>Donji ves</item>
        <item>Naocare</item>
        <item>Kaisevi</item>
        <item>Podesavanja</item>
        <item>Profil</item>
        <item>Odjavi se</item>

    </string-array>

    <string-array name="payment_options">

        <item>Novac u gotovini</item>
        <item>Cekovima gradjana</item>
        <item>Platnim karticama</item>
        <item>Ziralno placanje</item>


    </string-array>
</resources>
