<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:background="@drawable/bg">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/settingsicons"
            android:layout_width="500dp"
            android:layout_height="85.3dp"
            android:visibility="visible"
            android:background="@color/menuopacity"
            >

            <ImageView
                android:id="@+id/setingsiconmenu"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginLeft="16.7dp"
                android:layout_marginTop="38.7dp"
                android:layout_marginBottom="13.3dp"
                android:src="@drawable/menu"
                android:visibility="visible"
                />

            <com.example.user.mysupermarket.custom_component.TextViewFont
                android:id="@+id/settingslogo"
                android:layout_width="140.7dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26.7dp"
                android:src="@drawable/logo_white"
                android:layout_marginTop="40dp"
                android:text="@string/Settings"
                android:textColor="@color/colorwhite"
                android:textSize="22.7sp"
                />

        </LinearLayout>


        <ImageView
            android:id="@+id/settingsimage"
            android:layout_width="133.3dp"
            android:layout_height="133.3dp"

            android:layout_marginTop="33.3dp"
            android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="53.3dp"
            >



            <com.example.user.mysupermarket.custom_component.TextViewFont
                android:id="@+id/settings_notifications"
                android:layout_width="105.3dp"
                android:layout_height="38.7dp"
                android:textColor="#ffffff"
                android:layout_marginLeft="23.7dp"
                android:layout_marginTop="5dp"
                android:hint="@string/Korisnickoime"
                android:text="@string/Notifications"
                android:paddingLeft="3dp"
                android:paddingBottom="16dp"
                android:textAlignment="gravity"
                android:textSize="18.7sp"
                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/settings_notifications_switch"
                android:layout_width="45.3dp"
                android:layout_height="18.7dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="29.7dp"
                android:visibility="visible"
                android:theme="@style/SCBSwitch"

                />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.3dp"
            android:background="@color/underlineopacity"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="23.7dp"
            android:layout_marginRight="29.7dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="38.7dp"
            >



            <com.example.user.mysupermarket.custom_component.TextViewFont
                android:id="@+id/settings_termsofuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="23.7dp"
                android:layout_marginTop="5dp"

                android:text="@string/Uslovikoriscenja"
                android:paddingLeft="3dp"
                android:paddingBottom="16dp"
                android:textAlignment="gravity"
                android:textSize="18.7sp"
                />

            <ImageView
                android:id="@+id/settings_termsofuse_image"
                android:layout_width="33.3dp"
                android:layout_height="33.3dp"
                android:layout_marginLeft="132dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="29.7dp"
                android:visibility="visible"
                android:src="@drawable/right"

                />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.3dp"
            android:background="@color/underlineopacity"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="23.7dp"
            android:layout_marginRight="29.7dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="38.7dp"
            >



            <com.example.user.mysupermarket.custom_component.TextViewFont
                android:id="@+id/settings_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="23.7dp"
                android:layout_marginTop="5dp"

                android:text="@string/Profile"
                android:paddingLeft="3dp"
                android:paddingBottom="16dp"
                android:textAlignment="gravity"
                android:textSize="18.7sp"
                />

            <ImageView
                android:id="@+id/settings_profile_image"
                android:layout_width="33.3dp"
                android:layout_height="33.3dp"
                android:layout_marginLeft="232dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="29.7dp"
                android:visibility="visible"
                android:src="@drawable/right"

                />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.3dp"
            android:background="@color/underlineopacity"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="23.7dp"
            android:layout_marginRight="29.7dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="38.7dp"
            >



            <com.example.user.mysupermarket.custom_component.TextViewFont
                android:id="@+id/settings_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="23.7dp"
                android:layout_marginTop="5dp"

                android:text="@string/SignOut"
                android:paddingLeft="3dp"
                android:paddingBottom="16dp"
                android:textAlignment="gravity"
                android:textSize="18.7sp"
                />

            <ImageView
                android:id="@+id/settings_signout_image"
                android:layout_width="33.3dp"
                android:layout_height="33.3dp"
                android:layout_marginLeft="202dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="29.7dp"
                android:visibility="visible"
                android:src="@drawable/right"

                />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.3dp"
            android:background="@color/underlineopacity"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="23.7dp"
            android:layout_marginRight="29.7dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="38.7dp"
            >



            <com.example.user.mysupermarket.custom_component.TextViewFont
                android:id="@+id/settings_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="23.7dp"
                android:layout_marginTop="5dp"

                android:text="@string/Support"
                android:paddingLeft="3dp"
                android:paddingBottom="16dp"
                android:textAlignment="gravity"
                android:textSize="18.7sp"
                />

            <ImageView
                android:id="@+id/settings_support_image"
                android:layout_width="33.3dp"
                android:layout_height="33.3dp"
                android:layout_marginLeft="207dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="29.7dp"
                android:visibility="visible"
                android:src="@drawable/right"

                />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.3dp"
            android:background="@color/underlineopacity"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="23.7dp"
            android:layout_marginRight="29.7dp"
            android:layout_marginBottom="177.3dp"/>








    </LinearLayout>

</ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profil"
                >
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/imageViewUserPicture"

                    />

                <com.example.user.mysupermarket.custom_component.TextViewFont
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/imageViewUserPicture"
                    android:text="user"
                    android:textSize="27sp"
                    android:layout_marginLeft="15dp"
                    />

                <com.example.user.mysupermarket.custom_component.TextViewFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userEmail"
                    android:layout_below="@id/textViewUserName"
                    android:text="email"
                    android:layout_alignStart="@+id/textViewUserName"
                    android:textSize="18sp"

                    android:layout_alignLeft="@+id/textViewUserName" />
            </RelativeLayout>
            <ExpandableListView
                android:layout_below="@id/profil"
                android:id="@+id/extendibleListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:groupIndicator="@null"
                android:dividerHeight="0dp"
                android:divider="@null"
                />
        </RelativeLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>